src/test/deca/context/invalid/without_class/incompatible_type_op_arith3.deca
// Description:
//    Error in print function arguments
//
// Result:
//     INCOMPATIBLE_TYPE_OPERATOR: Type string is incompatible with type string for the operator +
//     line 9

{
    print("Hello" + "World");
}